fixed spacing between recipe cards

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ html{
 .hpage-link-container{
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
     gap: 32px;
     padding: 48px;
 }
@@ -61,6 +62,7 @@ html{
 .cards{
     text-align: center;
     width: 300px;
+    height: 250px;
     background: #A5CBA9;
     border-radius: 10px;
     border: 1px solid;
